--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Django==3.2.7
 django-colorfield==0.5.0
 django-cors-headers==3.10.1
 django-heroku==0.3.1
+django-on-heroku==1.1.2
 djangorestframework==3.13.1
 gunicorn==20.1.0
 ipython==7.30.1
